--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,9 @@
 
         <label>Email : </label><input type="text" name="email"><br>
 
+        <label>Email : </label><input type="text" name="email"><br>
+        <label>Email : </label><input type="text" name="email"><br>
+
         <label>Number :</label><input type="number" name="mobile"><br>
 
         <label>Age :</label><input type="number" name="age"><br>
