--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
     <label>AuthorName :</label><input type="text" name="Author"><br>
 
+    <label>AuthorName :</label><input type="text" name="Author"><br>
+
+    <label>AuthorName :</label><input type="text" name="Author"><br>
+
     <input type = "submit" value ="Submit">
   </form>
 </body>
