--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
       <style>
         body {background-color: skyblue;}
         label  {color: blue;}
+        input   {color: red;}    
         input   {color: red;}             
         </style>
     </head>
